# kodiproxy-rust

./: .gitignore  Cargo.toml  conf.json  install.sh
cache/: Cargo.toml  README.md
cache/src/: client.rs  db.rs  file_client.rs  handlers.rs  lib.rs  logs_comparator.rs  main.rs
files/: Cargo.toml  README.md
files/src/: db.rs  handlers.rs  lib.rs  log.rs  repository.rs  tests.rs
kp/: Cargo.toml  build.rs
kp/src/: lib.rs  main.rs
kp/src/avreceiver/: avreceiver.rs
kp/src/cec/: cec.rs  enums.rs  functions.rs  mod.rs
kp/src/configuration/: mod.rs
kp/src/handlers/: mod.rs
kp/src/handlers/avreceiver/: handlers.rs  mod.rs
kp/src/handlers/cec/: handlers.rs  mod.rs
kp/src/handlers/files/: handlers.rs  mod.rs
kp/src/handlers/jsonrpc/: jsonrpc.rs  mod.rs  poweroverloaders.rs  volumeoverloaders.rs
kp/tests/: integration.rs
resources/: kodiproxy.json  kodiproxy.systemd.service  tester.py
router/: Cargo.toml
router/src/: exit.rs  lib.rs  matcher.rs  router.rs
src/: cache-main.rs  kp.rs  main.rs
src/avreceiver/: avreceiver.rs  mod.rs
src/cec/: cec_fake.rs  structs.rs
src/configuration/: configuration.rs
src/dbus/: mod.rs
src/files/: handlers.rs  mod.rs  repository.rs
src/handlers/: mod.rs
src/handlers/cec/: handlers.rs  mod.rs
src/handlers/files/: handlers.rs  mod.rs  repository.rs
src/handlers/jsonrpc/: jsonrpc.rs  mod.rs  poweroverloaders.rs  volumeoverloaders.rs
src/router/: exit.rs  matcher.rs  mod.rs  router.rs
tests/: integration.rs
