[package]
name = "kodiproxy"
version = "0.1.0"
authors = ["bigbro"]
edition = "2018"

[dependencies]
async-std = "1"
async-trait = "0.1"
cfg-if = "1"
futures = "0.3"
hyper = "0.13"
quick-xml = { version = "0.19", features = [ "serialize" ] }
regex = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
mockall = "0.8"
url = "2"
wiremock = "0.3"