[package]
name = "cache"
version = "0.1.0"
edition = "2021"

[lib]
name = "kp_cache"
path = "src/lib.rs"

[[bin]]
name = "kp_cache"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
files = { path = "../files" }
http = "0.2"
hyper = "0.14"
lazy_static = "1"
log = "0.4"
regex = "1"
router = { path = "../router" }
serde = "1"
serde_json = "1"
tokio = "1"
