[package]
name = "files"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
log = "0.4"
regex = "1"
router = { path = "../router" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"

[dev-dependencies]
rstest = "0.10"
