[package]
name = "kodiproxy"
version = "0.1.0"
authors = ["bigbro"]
edition = "2018"

[lib]
name = "kp"
path = "src/lib.rs"

[[bin]]
name = "kodiproxy"
path = "src/main.rs"

[dependencies]
async-std = "1"
async-trait = "0.1"
clap = "2"
dbus = "0.9"
env_logger = "0.9"
files = { path = "../files" }
form_urlencoded = "1"
futures = "0.3"
http = "0.2"
hyper = "0.14"
libc = "0.2.0"
log = "0.4"
quick-xml = { version = "0.22", features = ["serialize"] }
router = { path = "../router" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockall = "0.10"
rstest = "0.10"
url = "2"
wiremock = "0.5"
