[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
async-trait = "0.1"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
regex = "1"
tokio = { version = "1", features = ["full"] }
